Eclipse/workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:19:47 **** Incremental Build of configuration Debug for project AutoCoding ****
Info: Internal Builder is used for build
g++ -std=c++11 -static-libgcc -static-libstdc++ "-IE:\\codeRepertory\\Eclipse\\workspace\\AutoCoding\\inc" -O0 -ggdb -Wall -c -fmessage-length=0 -o "src\\ACCodeManager.o" "..\\src\\ACCodeManager.cpp" 
..\src\ACCodeManager.cpp: In member function 'std::string ACCodeManager::creatOutputFields()':
..\src\ACCodeManager.cpp:227:90: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(vector<string>::size_type currIndex=0;currIndex<this->service.getNumOutputBindParam();currIndex++)
                                                                                          ^
In file included from E:\codeRepertory\Eclipse\workspace\AutoCoding\inc/ACCodeManager.h:11:0,
                 from ..\src\ACCodeManager.cpp:9:
E:\codeRepertory\Eclipse\workspace\AutoCoding\inc/ACService.h: In member function 'std::string ACCodeManager::creatBusinessProcess()':
E:\codeRepertory\Eclipse\workspace\AutoCoding\inc/ACService.h:148:6: error: 'int ACService::numOutputBindParam' is private
  int numOutputBindParam;  //SQL返回参数个数
      ^
..\src\ACCodeManager.cpp:352:19: error: within this context
  if(this->service.numOutputBindParam!=0)
                   ^
11:27:19 **** Incremental Build of configuration Debug for project AutoCoding ****
Info: Internal Builder is used for build
g++ -std=c++11 -static-libgcc -static-libstdc++ "-IE:\\codeRepertory\\Eclipse\\workspace\\AutoCoding\\inc" -O0 -ggdb -Wall -c -fmessage-length=0 -o "src\\ACCodeManager.o" "..\\src\\ACCodeManager.cpp" 
..\src\ACCodeManager.cpp: In member function 'std::string ACCodeManager::creatOutputFields()':
..\src\ACCodeManager.cpp:227:90: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(vector<string>::size_type currIndex=0;currIndex<this->service.getNumOutputBindParam();currIndex++)
                                                                                          ^
g++ -o AutoCoding.exe "src\\ACService.o" "src\\ACSQLManager.o" "src\\ACManager.o" "src\\ACConfManager.o" "src\\ACCodeManager.o" main.o 
Info: Nothing to build for AutoCoding
